# ichika

./: Cargo.toml  Cargo.toml.new  LICENSE  PLAN.md  README.md  justfile  test_type_match.rs
.github/workflows/: clippy.yml  docs.yml  fmt.yml  publish.yml  test.yml
docs/: lagrange.toml
docs/ar/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/en/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/es/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/fr/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/ja/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/ko/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/ru/: SUMMARY.md  advanced.md  book.toml  error-handling.md  examples.md  getting-started.md  introduction.md  pipe-macro.md  threadpool-trait.md
docs/theme/: lang-switcher.js
docs/zh-hans/: book.toml  error-handling.md  examples.md  getting-started.md
docs/zh-hant/: advanced.md  book.toml  examples.md  getting-started.md
docs/zhs/: SUMMARY.md  advanced.md  book.toml  examples.md  introduction.md  pipe-macro.md  (+1 more)
examples/: basic.rs  pipe.rs
src/: lib.rs  node.rs  pipe.rs  pipeline.rs  pod.rs
test_debug/: Cargo.toml
(+7 files in other folders)
