[workspace]
members = ["packages/macros", "packages/types"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }

futures = "^0.3"
flume = "^0.11"

num_cpus = "^1"
tokio = "^1"
async-std = "^1"
