[workspace]
members = ["packages/macros", "packages/types"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }

log = "^0.4"
env_logger = "^0.11"

futures = "^0.3"
flume = "^0.11"

num_cpus = "^1"
tokio = { version = "^1", features = ["rt", "rt-multi-thread"] }
async-std = "^1"
